# kmu_virtualdrive2025

devel/: .catkin  setup.fish  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/morai_msgs/: EgoVehicleStatus.h  MoraiWaitForTickSrvResponse.h  WaitForTickResponse.h
devel/include/obstacle_detect/: LidarObstacleInfo.h  LidarObstacleInfoArray.h  ObstacleInfo.h  ObstacleInfoArray.h  Rotary.h  RotaryArray.h
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node  navtest
devel/lib/openslam_gmapping/: autoptr_test  configfile_test  gfs2log  gfs2neff  gfs2rec  icptest  log_plot  log_test  rdk2carmen  scanmatch_test  scanstudio2carmen
devel/lib/pkgconfig/: ackermann_cmd_mux.pc  ackermann_msgs.pc  amcl.pc  auto_drive.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  (+23 more)
src/: README  frames.gv  map.pgm
src/auto_drive/: CMakeLists.txt  check.py
src/auto_drive/scripts/: lane_follower.py
src/learning_tf/: package.xml
src/obstacle_detect/: CMakeLists.txt
(+118 files in other folders)
